--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^5.3.7",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@reduxjs/toolkit": "^1.9.7",
@@ -62,6 +63,7 @@
     "prettier": "3.0.3",
     "react-hook-form": "^7.47.0",
     "react-markdown": "^9.0.0",
-    "react-redux": "^8.1.3"
+    "react-redux": "^8.1.3",
+    "redux-persist": "^6.0.0"
   }
 }
