--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-scripts": "5.0.1",
     "sass": "^1.58.3",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "sharp": "0.33.2"
   },
   "scripts": {
     "start": "react-scripts start",
