--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "project6",
   "version": "0.1.0",
   "private": true,
+  "homepage": "./",
   "dependencies": {
     "@ant-design/icons": "^5.3.7",
     "@emotion/react": "^11.11.1",
